--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
 PORT=3000
 PRODUCT_SERVICE_PORT=3001
 PRODUCT_SERVICE_HOST=localhost
+SUPPLIER_SERVICE_PORT=80
+SUPPLIER_SERVICE_HOST=http://localhost
